完善异常处理，实现controller和service的职责分离